code snippets no longer hard to read on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3060,7 +3060,6 @@ code {
 pre code { background: transparent; padding: 0; border-radius: initial;}
 
 pre.prettyprint {
-  background: #fff;
   margin: 1em auto;
   padding: 1em;
 }
@@ -3085,6 +3084,7 @@ pre .atv, code .atv { color: #65B042; } /* html/xml attribute value - green */
 pre .dec, code .dec { color: #3387CC; } /* decimal - blue */
 
 pre.prettyprint, code.prettyprint {
+  color: white;
   background-color: #444;
   border-radius: 8px;
 }
